# Sobreviventes-titanic

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Sobreviventes titanic.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
examples/: __init__.py  advanced_usage.py  basic_usage.py
src/: __init__.py  __main__.py
src/titanic/: __init__.py  data_loader.py  evaluator.py  model.py  predictor.py  preprocessor.py
tests/: __init__.py  test_data_loader.py
